<resources>
    <string name="app_name">Mobile Tour Guide</string>
    <string name="settings">Settings</string>
    <string name="lorem_ipsum">Sugar plum sugar plum gummies donut jelly powder. Icing muffin cheesecake liquorice wafer bonbon. Bonbon tootsie roll halvah. Lollipop macaroon bear claw chocolate cake. Chocolate bar gummi bears candy cheesecake icing oat cake. Cake chocolate cake liquorice pie. Donut halvah lollipop. Bear claw lollipop sweet roll cookie dragée dragée donut candy. Cheesecake liquorice marzipan dragée muffin chocolate dessert jujubes. Cupcake ice cream tootsie roll bonbon croissant gingerbread ice cream danish. Jelly beans donut jujubes sugar plum. Tootsie roll tiramisu chupa chups dragée cheesecake brownie chocolate bar chocolate bar icing. Apple pie cake carrot cake gingerbread candy canes</string>
    <string name="article_detail_more_info">More Info</string>

    <string name="pref_mountain_rankings">Mountains</string>

    <string-array name="pref_mountains_titles">
        <item>1 star</item>
        <item>2 stars</item>
        <item>3 stars</item>
        <item>4 stars</item>
        <item>5 stars</item>
    </string-array>

    <string name="pref_water_rankings">Water and Waterfalls</string>


    <string name="pref_schools_rankings">Schools</string>


    <string name="pref_trade_rankings">Trade and Business</string>


    <string name="pref_rocks_rankings">Rocks</string>


    <string name="pref_game_rankings">Game Parks</string>
    <string-array name="pref_game">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>
    <string name="samples_title">Hello title</string>
    <string name="samples_subhead">Hello Subhead</string>
    <string name="samples_hint_username">Username</string>
    <string name="samples_hint_email">E-Mail</string>
    <string name="go_to_map">Go to Map</string>
    <string name="q_and_a">Ask The Guide</string>

    <string name="facebook_app_id">203961023308060</string>
    <string name="navigation_title">My navigation title</string>
    <string name="navigation_quotes">Quotes</string>
    <string name="navigation_places">Places</string>
    <string name="navigation_samples">Samples</string>
    <string name="navigation_settings">Settings</string>
    <string name="navigation_sub_items">Sub items</string>
    <string name="navigation_dummy_item_1">Dummy item 1</string>
    <string name="navigation_dummy_item_2">Dummy item 2</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_maps">Map</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_ask_the_guide">AskTheGuideActivity</string>
    <string name="title_activity_get_map">Map</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to create account -->
    <string name="already_registered">Already have an account? Sign in</string>
    <string name="prompt_name">Name</string>
    <string name="action_register">Register</string>

    <!-- Strings related to forgot account-->
    <string name="action_recover">Recover</string>
    <string name="remembered_password">Just remembered it?</string>
    <!-- Strings related to login -->
    <string name="app_decription">Your awesome app</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign In</string>
    <string name="different_login">or</string>
    <string name="plus_sign_out">Change Google+ account</string>
    <string name="plus_disconnect">Disconnect from Google+</string>
    <string name="error_invalid_email">Invalid Email</string>
    <string name="error_invalid_password">The password is too short</string>
    <string name="error_incorrect_password">Email or password incorrect</string>
    <string name="error_field_required">Required</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="create_account">Register</string>
    <!-- Strings related to Settings -->


    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="title_activity_register">RegisterActivity</string>

    <string name="title_activity_forgot">ForgotPassActivity</string>

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_scanner">Scanner</string>
    <string name="title_place_list">Places</string>
    <string name="title_place_detail">Place Detail</string>
</resources>
