<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">

        <item
            android:id="@+id/go_to_map"
            android:icon="@drawable/ic_map"
            android:title="@string/go_to_map"/>
        <item
            android:id="@+id/nav_location"
            android:icon="@drawable/ic_location"
            android:title="@string/navigation_places" />
        <item
            android:id="@+id/question_and_answer"
            android:icon="@drawable/ic_action_ask"
            android:title="@string/q_and_a" />
        <item
            android:id="@+id/nav_samples"
            android:icon="@drawable/ic_forum"
            android:title="@string/navigation_samples" />

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_action_settings"
            android:title="@string/navigation_settings" />
    </group>

    <item android:title="@string/navigation_sub_items">
        <menu>
            <item
                android:icon="@drawable/ic_dashboard"
                android:title="@string/navigation_dummy_item_1" />
            <item
                android:icon="@drawable/ic_dashboard"
                android:title="@string/navigation_dummy_item_2" />
        </menu>
    </item>

</menu>
